# zendesk-mcp-server

./: .env.example  .gitignore  CLAUDE.md  README.md
docs/: remote-attachments-proposal.md
python/: README.md  pyproject.toml
python/docs/: load-balancer-configuration.md
python/tests/: test_server.py
python/zendesk_mcp/: attachment_store.py  server.py  zendesk_client.py
python/zendesk_mcp/tools/: __init__.py  attachments.py  automations.py  chat.py  groups.py  help_center.py  macros.py  organizations.py  search.py  support.py  talk.py  tickets.py  triggers.py  users.py  views.py
src/: server.js  zendesk-client.js
src/tools/: attachments.js  tickets.js
tests/: test_attachment_store.py
zendesk_mcp/: __init__.py  __main__.py  server.py
zendesk_mcp/tools/: macros.py  organizations.py  search.py  talk.py  triggers.py  views.py
